[build-system]
requires = ["setuptools", "setuptools-scm", "dynamic-versioning"]
build-backend = "setuptools.build_meta"

[project]
name =  "ddo"
description = "Implementation of 'Score-based Diffusion Models in Function Space'"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["ddo"]

[tool.setuptools.dynamic]
version = {attr = "ddo.__init__.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.bandit]
skips = ["B101"]

[tool.ruff]
fix = true
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["UP",  "I", "PL", "S"]
ignore =["S101", "PLR2004", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention= 'google'
