[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name =  "ddo"
description = "Implementation of 'Score-based Diffusion Models in Function Space'"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.hatch.build.targets.wheel]
packages = ["ddo"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "ddo/__init__.py"

[tool.bandit]
skips = ["B101"]

[tool.ruff]
fix = true
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["UP",  "I", "PL", "S"]
ignore =["S101", "PLR2004", "PLR0913", "E2"]

[tool.ruff.lint.pydocstyle]
convention= 'google'
